install watchify, browserify, mkdirp, and associated scripts

--- a/public/index.html
+++ b/public/index.html
@@ -1,20 +1,26 @@
+<!DOCTYPE html>
 <html>
 
 <head>
+  <link href="css/styles.css" rel="stylesheet" type="text/css" >
 </head>
 
 <body>
   <div class="container">
     <input id="formula-bar" type="text" value="" />
-    <table id="sheet-currrent">
+    <table id="sheet-current">
       <thead>
-        <tr></tr>
+        <tr>
+          <th></th>
+        </tr>
       </thead>
       <tbody>
+        <tr>
+          <td></td>
+        </tr>
       </tbody>
     </table>
   </div>
-
   <script src="js/bundle.js"></script>
 </body>
 
